fix small overflow on related-products
bugfix for icons on IE11

update inline-svg plugin to include colors

staging build speedup with collection construction in plugins instead of includes

include missing plugin file

remove unused image in /build

update tests to check thumbnails sizes

more reporting on thumbnails validation. Add validation on posts thumbnails

update tests for more clarity on suites grouping

--- a/_css/_store.scss
+++ b/_css/_store.scss
@@ -63,6 +63,7 @@
   color: $orange;
   font-weight: bold;
   width: 100%;
+  padding: 0 10px;
 }
 .shop-product .product-price {
   padding:6px;
@@ -116,4 +117,5 @@
     margin-left:auto;
     max-width:285px;
   }
+  overflow: hidden; /* or products overflow by 1px on small screens */
 }
